# playwithmpv

./: LICENSE  README.md  README.org  build.sh  pyproject.toml  requirements_dev.txt  setup.py
docs/: conf.py
playwithmpv/: __main__.py  server.py
